Working on the React components and the layout

--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,28 @@
             href="https://fonts.googleapis.com/css?family=Poppins: 300,400,500,600,700&display=swap"
             rel="stylesheet"
         />
+        <!-- SAILEC FONT -->
+        <link
+            href="//db.onlinewebfonts.com/c/ac9525e5f200f57332b3080d0db9d8f6?family=Sailec-Medium"
+            rel="stylesheet"
+            type="text/css"
+        />
+        <link
+            href="//db.onlinewebfonts.com/c/2fe381b3d8cf4ee5f331668970d8a65a?family=Sailec-Light"
+            rel="stylesheet"
+            type="text/css"
+        />
+        <link
+            href="//db.onlinewebfonts.com/c/61b43418b9624db49ba89da5d1b7eec8?family=Sailec-Bold"
+            rel="stylesheet"
+            type="text/css"
+        />
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <!-- Google FONTS - Lora -->
+        <link
+            href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;1,400;1,500&display=swap"
+            rel="stylesheet"
+        />
         <title>ioana tatu</title>
     </head>
     <body>
