style: add dark mode rules for Welcome component

--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,7 @@
             href="%PUBLIC_URL%/favicon-light.ico"
             id="light-scheme-icon"
         />
-        <link
-            rel="icon"
-            href="%PUBLIC_URL%/favicon-dark.ico"
-            id="dark-scheme-icon"
-        />
+        <link rel="icon" href="%PUBLIC_URL%/favicon-dark.ico" id="dark-scheme-icon" />
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
@@ -54,7 +50,7 @@
             rel="stylesheet"
         />
         <link
-            href="https://fonts.googleapis.com/css?family=Poppins: 300,400,500,600,700&display=swap"
+            href="https://fonts.googleapis.com/css?family=Poppins: 200,300,400,500,600,700&display=swap"
             rel="stylesheet"
         />
         <!-- SAILEC FONT -->
