--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,11 @@
             href="https://fonts.googleapis.com/css?family=Poppins: 200,300,400,500,600,700&display=swap"
             rel="stylesheet"
         />
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@100;200;300;400;500;600&display=swap"
+            rel="stylesheet"
+        />
         <!-- SAILEC FONT -->
         <link
             href="//db.onlinewebfonts.com/c/ac9525e5f200f57332b3080d0db9d8f6?family=Sailec-Medium"
@@ -70,11 +75,7 @@
             type="text/css"
         />
         <link rel="preconnect" href="https://fonts.gstatic.com" />
-        <!-- Google FONTS - Lora -->
-        <link
-            href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;1,400;1,500&display=swap"
-            rel="stylesheet"
-        />
+
         <title>ioana tatu</title>
     </head>
     <body>
