fix: style and compatibility 1. removed font which was making an insecure request 2. fixed element with an absolute positioning, which was being rendered differently by chrome and mozilla

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
         <!-- WEB FONTS -->
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link
             href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@700&display=swap"
             rel="stylesheet"
@@ -44,38 +45,19 @@
             href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500&display=swap"
             rel="stylesheet"
         />
-        <link rel="preconnect" href="https://fonts.gstatic.com" />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;800&display=swap"
-            rel="stylesheet"
-        />
         <link
             href="https://fonts.googleapis.com/css?family=Poppins: 200,300,400,500,600,700&display=swap"
             rel="stylesheet"
         />
-        <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link
             href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@100;200;300;400;500;600&display=swap"
             rel="stylesheet"
         />
-        <!-- SAILEC FONT -->
-        <link
-            href="//db.onlinewebfonts.com/c/ac9525e5f200f57332b3080d0db9d8f6?family=Sailec-Medium"
-            rel="stylesheet"
-            type="text/css"
-        />
-        <link
-            href="//db.onlinewebfonts.com/c/2fe381b3d8cf4ee5f331668970d8a65a?family=Sailec-Light"
-            rel="stylesheet"
-            type="text/css"
-        />
-        <link
-            href="//db.onlinewebfonts.com/c/61b43418b9624db49ba89da5d1b7eec8?family=Sailec-Bold"
-            rel="stylesheet"
-            type="text/css"
-        />
         <link rel="preconnect" href="https://fonts.gstatic.com" />
-
+        <link
+            href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800&display=swap"
+            rel="stylesheet"
+        />
         <title>ioana tatu</title>
     </head>
     <body>
