Add google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,20 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=G-T8BLGBMVFZ"
+        ></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
+
+            gtag("config", "G-T8BLGBMVFZ");
+        </script>
 
         <!-- FAVICONS based on browser color-mode -->
         <link
