--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script
+        <!-- <script
             async
             src="https://www.googletagmanager.com/gtag/js?id=G-T8BLGBMVFZ"
         ></script>
@@ -15,7 +14,9 @@
             gtag("js", new Date());
 
             gtag("config", "G-T8BLGBMVFZ");
-        </script>
+        </script> -->
+
+        <meta charset="utf-8" />
 
         <!-- FAVICONS based on browser color-mode -->
         <link
